# devtemplate

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  config.cmake.in  devtemplate.cmake  devtemplateConfig.cmake  uninstall.cmake
config/: Doxyfile  common.cmake  documentation.cmake  executable-gui.cmake  executable.cmake  export.cmake  header-only.cmake  install-cmake.cmake  install-documentation.cmake  install-executable-gui.cmake  install-executable.cmake  install-library.cmake  install-manual.cmake  install-python-executable.cmake  install-python-library.cmake  install-python-test.cmake  install.cmake  library.cmake  license.cmake  manual.cmake  package-debian.cmake  package-windows.cmake  python-executable.cmake  python-library.cmake  python-test.cmake  readme.cmake  test.cmake  uninstall.cmake  vscode.cmake
config/misc/: Doxyfile  path.py  uninstall.cmake
config/package/: debian.sh  windows.bat
config/script/: check.cmake  clean.cmake  configure.cmake  documentation.cmake  doxyfile.cmake  doxygen.cmake  path.py  readme.cmake  uninstall.cmake
config/template/: Doxyfile  LICENSE.md  README.md  config.cmake.in  control  devtemplate_gui.desktop  documentation.h  executable.exe.manifest  gui.desktop  installer.exe.manifest  launch.json  mainpage.h  man  man.1  manual  tasks.json
example/: example.cpp  example.py
executable/: executable-win32.cpp  executable-win32.rc  executable-x11.cpp  executable.cpp  executable.py  installer-win32.cpp  installer-win32.drawio  installer-win32.rc  test.cpp  test.py
icons/: magick.sh
include/: devtemplate.h
include/devtemplate/: devtemplate.h  devtemplate.hpp
python/: executable.py  python.cpp  test.py
source/: devtemplate.cpp  source.cpp
